<resources>
	<string name="app_name">TMDB App</string>
	<string name="back_text_movie_details">Top Rated</string>
	<string name="featured_crew">Featured Crew</string>
	<string name="director_role">Director, Screenplay, story</string>
	<string name="director_name">James Mangold</string>
	<string name="codirector_name">David James Kelly</string>
	<string name="codirector_role">Story</string>
	<string name="genre_time_date">Action | 2h 17min | 03/03/2017</string>
	<string name="movie_title">Logan</string>
	<string name="release_date">(2017)</string>
	<string name="overview">Overview</string>
	<string name="overview_text">In the near future, a weary Logan cares for an ailing. Professor X in a hideout on the
		Mexican border. But Logan\'s attempts to hide from the world and his legacy are upended when a young mutant
		arrives, pursued by dark
	</string>
	<string name="cast">Cast</string>
	<string name="pref_key_limit" translatable="false">pref_key_limit</string>
	<string name="pref_key_last_update" translatable="false">pref_key_last_update</string>
	<string name="back_button_movie_details_description">back button movie details description</string>
	<string name="vote_average">7,3</string>
	<string name="over_ten">/10</string>
	<string name="poster_image_description">poster image description</string>
	<string name="bookmark_black_description">bookmark black description</string>
	<string name="__">-</string>
	<string name="poster_transition">poster_transition</string>
	<string name="title">Title</string>
	<string name="popularity">Popularity</string>
	<string name="action_settings">action_settings</string>
	<string name="no_connection">no connection</string>
	<string name="pref_key_first_time" translatable="false">pref_key_first_time</string>
	<string name="no_description">No description provided for this film.</string>
</resources>
