<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:padding="@dimen/margin_default"
		android:layout_height="wrap_content">

	<LinearLayout
			android:id="@+id/list_item_movie"
			android:layout_width="match_parent"
			android:gravity="center_vertical"
			android:orientation="horizontal"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:layout_height="wrap_content">

		<ImageView
				android:id="@+id/item_movie_poster"
				android:src="@drawable/logan_poster"
				android:layout_width="@dimen/list_item_size"
				android:transitionName="@string/poster_transition"
				android:layout_height="@dimen/list_item_size"/>

		<TextView
				android:id="@+id/movie_title"
				android:text="@string/title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>

	</LinearLayout>

	<TextView
			android:id="@+id/movie_popularity"
			android:layout_marginEnd="@dimen/margin_default"
			android:text="@string/popularity"
			app:layout_constraintBottom_toBottomOf="@id/list_item_movie"
			app:layout_constraintEnd_toStartOf="@id/movie_favorite"
			app:layout_constraintTop_toTopOf="@id/list_item_movie"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

	<ImageView
			android:id="@+id/movie_favorite"
			android:src="@drawable/icon_not_favorite"
			android:tint="@color/favorite_star_color"
			app:layout_constraintBottom_toBottomOf="@id/list_item_movie"
			app:layout_constraintEnd_toEndOf="@id/list_item_movie"
			app:layout_constraintTop_toTopOf="@id/list_item_movie"
			android:layout_width="@dimen/star_size"
			android:layout_height="@dimen/star_size"/>

</androidx.constraintlayout.widget.ConstraintLayout>